...
  String get loginAuth => 'Авторизация';

  @override
  String get loginEmailHint => 'Электронная почта';

  @override
  String get loginPasswordHint => 'Пароль';

  @override
  String get loginIn => 'Войти';

  @override
  String get loginRememberMe => 'Запомнить меня';

  @override
  String get loginForgotPassword => 'Забыли пароль?';
...
  String get seating => 'Рассадка';

  @override
  String get idHint => '23';

  @override
  String get tournamentsListTitle => 'Турниры';

  @override
  String get tournamentsListDateHeader => 'Дата турнира';

  @override
  String get tournamentsListGamesCountHeader => 'Количество игр';
...
  String get loginRegistration => 'Зарегистрироваться';

  @override
  String get loginRegister => 'Регистрация';

  @override
  String get addPlayer => 'Добавить участника';

  @override
  String get nicknameHint => 'Никнейм';

  @override
  String get fsmNicknameHint => 'Никнейм в ФСМ (не обязательно)';

  @override
  String get mafbankNicknameHint => 'Никнейм как на мафбанке (не обязательно)';

  @override
  String get addPlayerDialogTitle => 'Добавление участника';

  @override
  String get add => 'Добавить';

  @override
  String get finalGamesHint => 'Количество финальных игр';

  @override
  String get swissGamesHint => 'Количество игр в швейцарке';
...
  String get defaultGamesHint => 'Количество отборочных игр';

  @override
  String get settings => 'Настройки';

  @override
  String get yourEmail => 'Ваша электронная почта';

  @override
  String get wrongEmail => 'Профиль с такой почтой уже существует / Неверная почта';

  @override
  String get enterPassword => 'Введите пароль';
...
  String get confirmRegistration => 'Подтверждение регистрации';

  @override
  String get enterCode => 'Введите код';

  @override
  String get yes => 'Да';

  @override
  String get no => 'Нет';

  @override
  String get confirmText => 'Вы уверены?';
...
  String get clubsHeader => 'Клубы';

  @override
  String get description => 'Описание';

  @override
  String get openRating => 'Открыть рейтинг клуба';

  @override
  String get clubDescription => 'Описание клуба';

  @override
  String get clubEditOwners => 'Редактировать администраторов';
...
